changes before presentation

--- a/GreyMatterWeb/Views/Shared/_LoginPartial.cshtml
+++ b/GreyMatterWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,16 +1,24 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
+    <ul class="nav navbar-nav">
+        <li>@Html.ActionLink("Options", "Options", "Player")</li>
+        <li>@Html.ActionLink("Outcomes", "Outcomes", "Player")</li>
+        <li>@Html.ActionLink("Situations", "Situations", "Player")</li>
+        <li>@Html.ActionLink("My Options", "MyOptions", "Player")</li>
+        <li>@Html.ActionLink("My Outcomes", "MyOutcomes", "Player")</li>
+        <li>@Html.ActionLink("My Situations", "MySituations", "Player")</li>
+    </ul>
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
-    @Html.AntiForgeryToken()
+        @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            </li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        </ul>
     }
 }
 else
